Fixed overlapping problem in x-small screen for the top navigation header and adjust red background color to #f00

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
 }
 
 ._lh09 {
-  line-height: 0.9em;
+  line-height: 0.99;
 }
 
 ._right0 {
